--- a/MVCApp/Views/Postulation/List.cshtml
+++ b/MVCApp/Views/Postulation/List.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "List";
 }
 
-<h2>Postulation List of </h2>
+<h2>Your postulations</h2>
 
 <table class="table table-striped table-dark">
     <thead>
