--- a/MVCApp/Views/Shared/_Layout.cshtml
+++ b/MVCApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Offers", "List", "Offer")</li>
-                    <li>@Html.ActionLink("Postulations", "List", "Postulation")</li>
+                    <li>@Html.ActionLink("My Postulations", "List", "Postulation")</li>
                 </ul>
             </div>
         </div>
