--- a/MVCApp/Views/Offer/List.cshtml
+++ b/MVCApp/Views/Offer/List.cshtml
@@ -5,23 +5,11 @@
 }
 
 <h2>Offer List</h2>
-<table class="table table-striped table-dark">
-    <thead>
-        <tr>
-            <th scope="col">Title</th>
-            <th scope="col">Description</th>
-            <th scope="col">Salary</th>
-        </tr>
-    </thead>
-    <tbody>
+<div class="container">
+    <div class="row">
         @foreach (var offer in Model.OfferVMs)
         {
-        <tr>
-            <th scope="row">@offer.Title</th>
-            <td>@offer.Description</td>
-            <td>@offer.Salary €</td>
-            <td>@Html.RouteLink("Detail", "Detail",new {id= offer.Id})</td>
-        </tr>
+            Html.RenderPartial("_OffreDetail", offer);
         }
-    </tbody>
-</table>
+    </div>
+</div>
